# beeswarm

./: .gitignore  README.md  atomic-lint.config.json  manifest.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.build.json  tsconfig.json  tsconfig.regression.json  tsup.config.ts  vite.config.js
.github/workflows/: ci.yml  release.yml
scripts/: build-ui.mjs  clean.mjs  dev-doctor.mjs  dev.mjs  full-health-check.mjs  lint-api-contract.mjs  lint-atomic.mjs  lint-ui-contract.mjs  lint-ui-i18n.mjs  release.mjs  setup-sidecar.mjs  test-ui.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: bridge.rs  config.rs  lib.rs  updater.rs
src/api/controllers/: BaseController.ts  ChannelController.ts  HarnessController.ts  IMController.ts  MonitorController.ts  ProjectModeController.ts  SessionController.ts  SystemController.ts
src/api/routes/: RouteRegistry.ts
src/common/bus/: UsecaseBus.ts
src/common/context/: SessionContext.ts
src/common/di/: container.ts  symbols.ts
src/common/utils/: UnifiedEnv.ts
src/features/harness/: HarnessEvaluationService.ts  HarnessExecutionService.ts  HarnessFailureClassifierService.ts  (+4 more)
src/startup/: cli.ts  index.ts
ui/: entry.js  index.html
ui/app/: NebulaApp.js  NebulaAppConfig.js  NebulaAppDialog.js  NebulaAppRender.js  NebulaAppRuntime.js  NebulaDom.js  NebulaEventBus.js  NebulaStateStore.js
ui/i18n/: en-US.js  zh-CN.js
ui/renderers/: HubListRenderer.js  MessageListRenderer.js  SystemVersionRenderer.js  ToolListRenderer.js
ui/services/: StreamClient.js  i18n.js  logger.js
ui/utils/: Icons.js
(+91 files in other folders)
