[package]
name = "beeswarm"
version = "1.0.0"
description = "BeeSwarm Desktop App"
authors = ["BeeSwarm Team"]
license = "MIT"
repository = "https://github.com/bowen7778/beeswarm"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2.4.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"
ed25519-dalek = { version = "2", features = ["pem"] }
tar = "0.4"
flate2 = "1.0"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
tokio = { version = "1", features = ["full"] }
tempfile = "3"
